@startuml
package presentation {

    package handlers {
        class BookRequesterByConsole {
            - unrequestedBook: Book?
            + AskForEntity(): Book
            - ReceiveBookByConsole(): Book
            - ConfirmBookReceived(Book bookReceived): Book?
            - RenderBookReceived(Book bookReceived): void
        }

        class PatronRequesterByConsole {
            - unrequestedPatron: Patron?
            + AskForEntity(): Patron
            - ReceivePatronByConsole(): Patron
            - ConfirmPatronReceived(Patron patronReceived): Patron?
            - RenderPatronReceived(Patron patronReceived): void
        }

        interface IEntityRequester<T: IEntity> {
            + AskForEntity(): T
        }
        IEntityRequester <.. BookRequesterByConsole
        IEntityRequester <.. PatronRequesterByConsole
    }

    class ReportsOptions {
        - borrowStatusReport: BorrowStatusReport
        - patronBorrowReport: PatronBorrowReport
        + ReportInitialOptions(): Task
        - ReportBooksCurrentlyBorrowed(): Task
        - ReportBooksOverdue(): Task
        - ReportPatronBorrowed(): Task
    }

    class Header {
        + {static} AppHeader(): void
    }

    class PatronOptions {
        - patronRepository: IPatronRepository
        - patronRequester: IEntityRequester
        + PatronInitialOptions(): Task
        - RegisterNewPatron(): Task
        - DeletePatron(): Task
        - EditPatron(): Task
        - SearchPatron(): Task
        - SearchPatronsByMembershipNumber(): Task
        - PaginatedSearchByName(): Task
    }
    PatronOptions o-- IEntityRequester

    class BorrowOptions {
        + {static} BorrowInitialOptions(): void
        - {static} RegisterNewBorrow(BorrowRepositoryImplementation repository): void
    }

    class BookOptions {
        - bookRepository: IBookRepository
        - bookRequester: IEntityRequester
        + BookInitialOptions(): Task
        - RegisterNewBook(): Task
        - DeleteBook(): Task
        - EditBook(): Task
        - SearchBook(): Task
        - PaginatedSearchByTitle(): Task
        - PaginatedSearchByAuthor(): Task
        - SearchByIsbn(): Task
    }
    BookOptions o-- IEntityRequester

    class BorrowConsoleRenderer {
        + GetPatronId(): Guid
        + GetBookId(): Guid
        + DisplayBorrowDetails(Borrow borrow): void
        + ConfirmBorrow(): bool
    }

    interface IBorrowConsoleRenderer {
        + GetPatronId(): Guid
        + GetBookId(): Guid
        + DisplayBorrowDetails(Borrow borrow): void
        + ConfirmBorrow(): bool
    }
    IBorrowConsoleRenderer <.. BorrowConsoleRenderer

    class MainMenu {
        - bookOptions: BookOptions
        - patronOptions: PatronOptions
        - borrowOptions: BorrowOptions
        - reportsOptions: ReportsOptions
        + InitialMainMenu(): Task
        + InitializeApp(): Task
        + {static} void ShowProgressBar()
    }
    MainMenu o-- BorrowOptions
    MainMenu o-- BookOptions
    MainMenu o-- PatronOptions
    MainMenu o-- ReportsOptions
}
@enduml
